[package]
name = "hopfield-trading"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Project"]
description = "Hopfield Networks for cryptocurrency trading pattern recognition"
license = "MIT"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["hopfield", "trading", "cryptocurrency", "pattern-recognition", "neural-network"]
categories = ["science", "algorithms", "finance"]

[lib]
name = "hopfield_trading"
path = "src/lib.rs"

[[example]]
name = "pattern_recognition"
path = "examples/pattern_recognition.rs"

[[example]]
name = "regime_detection"
path = "examples/regime_detection.rs"

[[example]]
name = "trading_signals"
path = "examples/trading_signals.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numerical operations
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
gpu = []  # Future GPU acceleration support

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
